補目前的進度

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<prjCatChaOnlineShop.Models.CModels.CProductItem>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -123,123 +125,43 @@
             </div>
         </div>
         <div class="row special-list">
-
-            <!-- start prod1  -->
-            <div class="col-lg-3 col-md-6 special-grid best-seller">
-                <div class="products-single-custom fix">
-                    <a asp-controller="Index" asp-action="ShopDetail" title="喵洽普 | 貓咪營養肉泥">
-
-                        <div class="box-img-hover">
-                            <div class="type-lb">
-                                <p class="sale">Sale</p>
+            @{
+                foreach (var item in Model.ToList().OrderByDescending(p => p.product.ReleaseDate).Take(4))
+                {
+                    <!-- start prod  -->
+                    <div class="col-lg-3 col-md-6 special-grid best-seller">
+                        <div class="products-single-custom fix">
+                            <a asp-controller="Index" asp-action="ShopDetail" title="@item.product.ProductName">
+                                <div class="box-img-hover">
+                                    <div class="type-lb">
+                                        <p class="sale">Sale</p>
+                                    </div>
+                                    <img src=@item.pImgPath class="img-fluid shop-image" alt="Image" />
+                                </div>
+                            </a>
+                            <div class="why-text">
+                                <h4>@item.product.ProductName</h4>
+                                @if (item.product.Discount != null)
+                                {
+                                    <h5>$@item.pSalePrice</h5>
+                                    <del>$@item.product.ProductPrice</del>
+                                }
+                                else
+                                {
+                                    <h5>$@item.product.ProductPrice</h5>
+                                }
+                                <a asp-controller="ProductApi" asp-action="AddToCart" type="button" class="add-to-cart-coustom">
+                                    <i class="fa-solid fa-cart-plus"></i>
+                                </a>
+                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
+                                    <i class="far fa-heart"></i>
+                                </a>
                             </div>
-                            <img src="~/images/prod-eg-1.jpg" class="img-fluid shop-image" alt="Image" />
-
                         </div>
-                    </a>
-                    <div class="why-text">
-                        <h4>喵洽普 | 貓咪營養肉泥</h4>
-                        <h5>$65</h5>
-                        <a asp-controller="Cart" asp-action="Cart" type="button" class="add-to-cart-coustom">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </a>
-                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
-                            <i class="far fa-heart"></i>
-                        </a>
-
                     </div>
-
-
-                </div>
-            </div>
-            <!-- end prod1  -->
-            <!-- start prod2  -->
-            <div class="col-lg-3 col-md-6 special-grid best-seller">
-                <div class="products-single-custom fix">
-                    <a asp-controller="Index" asp-action="ShopDetail" title="PETCIRCLE｜寵物繩結胡蘿蔔">
-                        <div class="box-img-hover">
-                            <div class="type-lb">
-                                <p class="new">New</p>
-                            </div>
-                            <img src="~/images/prod-eg-2.png" class="img-fluid shop-image" alt="Image" />
-
-                        </div>
-                    </a>
-                    <div class="why-text">
-                        <h4>PETCIRCLE｜寵物繩結胡蘿蔔</h4>
-                        <h5>$99</h5>
-                        <a asp-controller="Cart" asp-action="Cart" type="button" class="add-to-cart-coustom">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </a>
-                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
-                            <i class="far fa-heart"></i>
-                        </a>
-
-                    </div>
-
-
-                </div>
-            </div>
-            <!-- end prod2  -->
-            <!-- start prod3  -->
-            <div class="col-lg-3 col-md-6 special-grid best-seller">
-                <div class="products-single-custom fix">
-                    <a asp-controller="Index" asp-action="ShopDetail" title="Pet Candy｜手工貓草玩具">
-                        <div class="box-img-hover">
-                            <div class="type-lb">
-                                <p class="sale">Sale</p>
-                            </div>
-                            <img src="~/images/prod-eg-3.png" class="img-fluid shop-image" alt="Image" />
-
-                        </div>
-                    </a>
-                    <div class="why-text">
-                        <h4>Pet Candy｜手工貓草玩具</h4>
-                        <h5>$240</h5>
-                        <del>$280</del>
-                        <a asp-controller="Cart" asp-action="Cart" type="button" class="add-to-cart-coustom">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </a>
-                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
-                            <i class="far fa-heart"></i>
-                        </a>
-
-                    </div>
-
-
-                </div>
-            </div>
-            <!-- end prod3  -->
-            <!-- start prod4 -->
-            <div class="col-lg-3 col-md-6 special-grid best-seller">
-                <div class="products-single-custom fix">
-                    <a asp-controller="Index" asp-action="ShopDetail" title="GLADVET｜舒穩安 天然情緒保健品">
-                        <div class="box-img-hover">
-                            <div class="type-lb">
-                                <p class="new">New</p>
-                            </div>
-                            <img src="~/images/prod-eg-5.png" class="img-fluid shop-image" alt="Image" />
-
-                        </div>
-                    </a>
-                    <div class="why-text">
-                        <h4>GLADVET｜舒穩安 天然情緒保健品</h4>
-                        <h5>$2200</h5>
-
-                        <a asp-controller="Cart" asp-action="Cart" type="button" class="add-to-cart-coustom">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </a>
-                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
-                            <i class="far fa-heart"></i>
-                        </a>
-
-                    </div>
-
-
-
-                </div>
-            </div>
-            <!-- end prod4  -->
+                    <!-- end prod  -->
+                }
+            }
         </div>
     </div>
 </div>
@@ -284,120 +206,44 @@
         </div>
         <div class="row special-list">
 
-            <!-- start prod1  -->
-            <div class="col-lg-3 col-md-6 special-grid best-seller">
-                <div class="products-single-custom fix">
-                    <a asp-controller="Index" asp-action="ShopDetail" title="喵洽普 | 貓咪營養肉泥">
+            @{
 
-                        <div class="box-img-hover">
-                            <div class="type-lb">
-                                <p class="sale">Sale</p>
+                foreach (var item in Model.OrderBy(p => p.product.RemainingQuantity).Take(4))
+                {
+                    <div class="col-lg-3 col-md-6 special-grid best-seller">
+                        <div class="products-single-custom fix">
+                            <a asp-controller="Index" asp-action="ShopDetail" title="@item.product.ProductName">
+                                <div class="box-img-hover">
+                                    <div class="type-lb">
+                                        <p class="sale">Sale</p>
+                                    </div>
+                                    <img src=@item.pImgPath class="img-fluid shop-image" alt="Image" />
+                                </div>
+                            </a>
+                            <div class="why-text">
+                                <h4>@item.product.ProductName</h4>
+                                @if (item.product.Discount != null)
+                                {
+                                    <h5>$@item.pSalePrice</h5>
+                                    <del>$@item.product.ProductPrice</del>
+                                }
+                                else
+                                {
+                                    <h5>$@item.product.ProductPrice</h5>
+                                }
+                                <a asp-controller="ProductApi" asp-action="AddToCart" type="button" class="add-to-cart-coustom">
+                                    <i class="fa-solid fa-cart-plus"></i>
+                                </a>
+                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
+                                    <i class="far fa-heart"></i>
+                                </a>
                             </div>
-                            <img src="~/images/prod-eg-1.jpg" class="img-fluid shop-image" alt="Image" />
-
                         </div>
-                    </a>
-                    <div class="why-text">
-                        <h4>喵洽普 | 貓咪營養肉泥</h4>
-                        <h5>$65</h5>
-                        <a asp-controller="Cart" asp-action="Cart" type="button" class="add-to-cart-coustom">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </a>
-                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
-                            <i class="far fa-heart"></i>
-                        </a>
-
                     </div>
+                    <!-- end prod1  -->
+                }
+            }
 
-
-                </div>
-            </div>
-            <!-- end prod1  -->
-            <!-- start prod2  -->
-            <div class="col-lg-3 col-md-6 special-grid best-seller">
-                <div class="products-single-custom fix">
-                    <a asp-controller="Index" asp-action="ShopDetail" title="PETCIRCLE｜寵物繩結胡蘿蔔">
-                        <div class="box-img-hover">
-                            <div class="type-lb">
-                                <p class="new">New</p>
-                            </div>
-                            <img src="~/images/prod-eg-2.png" class="img-fluid shop-image" alt="Image" />
-
-                        </div>
-                    </a>
-                    <div class="why-text">
-                        <h4>PETCIRCLE｜寵物繩結胡蘿蔔</h4>
-                        <h5>$99</h5>
-                        <a asp-controller="Cart" asp-action="Cart" type="button" class="add-to-cart-coustom">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </a>
-                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
-                            <i class="far fa-heart"></i>
-                        </a>
-
-                    </div>
-
-
-                </div>
-            </div>
-            <!-- end prod2  -->
-            <!-- start prod3  -->
-            <div class="col-lg-3 col-md-6 special-grid best-seller">
-                <div class="products-single-custom fix">
-                    <a asp-controller="Index" asp-action="ShopDetail" title="Pet Candy｜手工貓草玩具">
-                        <div class="box-img-hover">
-                            <div class="type-lb">
-                                <p class="sale">Sale</p>
-                            </div>
-                            <img src="~/images/prod-eg-3.png" class="img-fluid shop-image" alt="Image" />
-
-                        </div>
-                    </a>
-                    <div class="why-text">
-                        <h4>Pet Candy｜手工貓草玩具</h4>
-                        <h5>$240</h5>
-                        <del>$280</del>
-                        <a asp-controller="Cart" asp-action="Cart" type="button" class="add-to-cart-coustom">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </a>
-                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
-                            <i class="far fa-heart"></i>
-                        </a>
-
-                    </div>
-
-
-                </div>
-            </div>
-            <!-- end prod3  -->
-            <!-- start prod4 -->
-            <div class="col-lg-3 col-md-6 special-grid best-seller">
-                <div class="products-single-custom fix">
-                    <a asp-controller="Index" asp-action="ShopDetail" title="GLADVET｜舒穩安 天然情緒保健品">
-                        <div class="box-img-hover">
-                            <div class="type-lb">
-                                <p class="new">New</p>
-                            </div>
-                            <img src="~/images/prod-eg-5.png" class="img-fluid shop-image" alt="Image" />
-
-                        </div>
-                    </a>
-                    <div class="why-text">
-                        <h4>GLADVET｜舒穩安 天然情緒保健品</h4>
-                        <h5>$2200</h5>
-
-                        <a asp-controller="Cart" asp-action="Cart" type="button" class="add-to-cart-coustom">
-                            <i class="fa-solid fa-cart-plus"></i>
-                        </a>
-                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom" type="button">
-                            <i class="far fa-heart"></i>
-                        </a>
-                    </div>
-
-
-                </div>
-            </div>
-            <!-- end prod4  -->
         </div>
     </div>
 </div>
